--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "atendimento_nodejs",
   "version": "1.0.0",
-  "description": "",
+  "description": "api rest com integração com o banco de dados para CRUD",
   "main": "index.js",
   "scripts": {
     "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "",
+  "author": "github.com/Alanz0ka",
   "license": "ISC",
   "dependencies": {
     "express": "^4.19.2",
